Ensure li padding-left 4px on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -312,6 +312,9 @@ li.highlight-green {
     font-size: 11px !important;
     padding-left: 14px !important;
   }
+  .detail-list li {
+    padding-left: 4px !important;
+  }
   .papertitle {
     font-size: 13px;
   }
